# supply-chain-dashboard

./: .env  .env.example  GUIDE_DEMARRAGE.md  README.md  RESUME_PROJET.md  cle  cle.pub  requirements.txt
database/: db_connection.py  import_db.py  schema.sql
supply_chain_v2/: .env.example  .gitignore  Procfile  README.md  app.json  demo_data.py  fix_database.py  requirements.txt  setup.cfg  setup.py  setup.sh  setup_database.py  start.sh  update_schema.sql
supply_chain_v2/app/: __init__.py  config.py  database.py  main.py
supply_chain_v2/components/: crud_utils.py  professional_ui.py  sidebar.py
supply_chain_v2/pages/: clients.py  dashboard.py  orders.py  products.py  stocks.py  suppliers.py  warehouses.py
supply_chain_v2/services/: kpi_service.py
