[metadata]
name = supply-chain-dashboard
version = 0.1.0
description = Supply Chain Management Dashboard
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.13.0
install_requires =
    streamlit>=1.30.0
    pandas>=2.1.0
    numpy>=1.26.0
    psycopg2-binary>=2.9.9
    python-dotenv>=1.0.0
    plotly>=5.13.0
    SQLAlchemy>=2.0.0
    streamlit-aggrid>=0.3.4
    streamlit-option-menu>=0.3.6
    streamlit-lottie>=0.0.4
    openpyxl>=3.0.10
    scikit-learn>=1.2.0
    protobuf<5.0.0,>=4.21.0

[options.packages.find]
where = .
include = supply_chain_v2*
